Initial commit, estructura de la práctica 5.

--- a/SunnyWiltshire/index.html
+++ b/SunnyWiltshire/index.html
@@ -42,8 +42,8 @@
         <hr>
 
         <h2>Práctica 3</h2>
-        <p>En esta pagina se realizó una modificación de la primera practi</p>
-        <p>Realicé 6 commits, del 27 al 29 de Agosto.</p>
+        <p>En esta pagina se realizó una modificación de la primera practica, agregando estilos de CSS, etiquetas de HTML y una pagina por cada pasatiempo.</p>
+        <p>Realicé 9 commits, del 27 al 29 de Agosto.</p>
         <h3>Enlaces de la práctica 3:</h3>
         <ul>
             <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P2v1/index.html">Página pasatiempos versión 2</a></li>
@@ -51,8 +51,30 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-08-27&until=2025-08-29">Link de los commits.</a></li>
 
         </ul>
+        <hr>
+
+        <h2>Práctica 4</h2>
+        <p>Se agregó estilos a el enlace en la pagina del listado del grupo, afectando solamente a mi usuario.</p>
+        <p>Realicé un  solo commit, en el cual se modificó el color, alineación, el espacio que abarcaría el mismo y un borde.</p>
+        <p>Fecha de los commits: 01 al 03 de Septiembre.</p>
+        <h3>Enlaces de la práctica 3:</h3>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-09-01&until=2025-09-03">Link de los commits.</a></li>
+        </ul>
+        <hr>
+
+        <h2>Práctica 5</h2>
+        <p>En base a los archivos de extención HTML sobre los pasatiempos versión 2 (práctica 3). Se creará otro sitio donde se muestren ejemplos de los selectores de CSS. Cada uno con su respectivo selector, código y resultado en la página.</p>
+        <p>Realicé n commits, del 08 al 10 de Septiembre.</p>
+        <h3>Enlaces de la práctica 5:</h3>
+        <ul>
+            <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P5/index.html">Página selectores.</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-09-08&until=2025-09-10">Link de los commits.</a></li>
+        </ul>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <p>Creado por: VLMG (AKA: SunnyW.py)</p>
+    </footer>
 </body>
 </html>
