Selector universal pag1.html

--- a/Marikve7/pasatiempos2/pagina1.html
+++ b/Marikve7/pasatiempos2/pagina1.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
 
-        <section>
+        <section id="n01">
             <header>
                 <h2>Actividad recreativa</h2>
                 <hr>
