--- a/Marikve7/pasatiempos2/pagina1.html
+++ b/Marikve7/pasatiempos2/pagina1.html
@@ -43,7 +43,7 @@
 
         <section>
             <article>
-                <h3>Bailes</h3>
+                <h3 id="n02">Bailes</h3>
                 <hr>
                 <p>Estos son algunas de las canciones que me gusta bailar, aunque la verdad me gusta bailar 
                     de todo tipo de música, solo que me voy más por este género. 
