selector por clase pag4.html

--- a/Marikve7/pasatiempos2/pagina4.html
+++ b/Marikve7/pasatiempos2/pagina4.html
@@ -43,7 +43,7 @@
                     </tr>
 
                     <tr>
-                        <td>Bailar</td>
+                        <td class="letra">Bailar</td>
                         <td>X</td>
                         <td>-</td>
                         <td>-</td>
@@ -51,7 +51,7 @@
                     </tr>
 
                     <tr>
-                        <td>Escuchar música</td>
+                        <td class="letra">Escuchar música</td>
                         <td>X</td>
                         <td>-</td>
                         <td>-</td>
@@ -59,7 +59,7 @@
                     </tr>
 
                     <tr>
-                        <td>Ver series</td>
+                        <td class="letra">Ver series</td>
                         <td>-</td>
                         <td>X</td>
                         <td>-</td>
@@ -88,19 +88,19 @@
                 </tr>
 
                 <tr>
-                    <td>Bailar</td>
+                    <td class="letra">Bailar</td>
                     <td colspan="3">-</td>
                     <td colspan="4">X</td>
                 </tr>
 
                 <tr>
-                    <td>Escuchar música</td>
+                    <td class="letra">Escuchar música</td>
                     <td colspan="5">X</td>
                     <td colspan="2">-</td>
                 </tr>
 
                 <tr>
-                    <td>Ver series</td>
+                    <td class="letra">Ver series</td>
                     <td colspan="4">-</td>
                     <td colspan="3">X</td>
                 </tr>
