--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -59,7 +59,17 @@
             <ul>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-01&until=2025-09-03">Commits 01 al 03 de agosto</a></li>
             </ul>
-        </section>      
+        </section> 
+        </section>
+        <h2>Evidencia 5</h2>
+        <p>En esta practica utilicé los archivos HTML sobre mis pasatiempos versión 2 y creé un sitio donde se muestra por lo menos un ejemplo de cada selector CSS</p>
+    <section class="links">
+            <h2>Links solicitados</h2>
+            <ul>
+                <li><a href="pasatiemposv2/index.html">Página selectores</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-27&until=2025-08-27">Commits</a></li>
+            </ul>
+        </section>             
     </main>
     <footer> 
         <p>Desarrollado por Ilse Ojeda 
