selector de atributo pag1.html

--- a/Marikve7/pasatiempos2/pagina1.html
+++ b/Marikve7/pasatiempos2/pagina1.html
@@ -58,7 +58,7 @@
             </article>
         </section>
 
-        <section>
+        <section id="n03">
             <article>
                 <h3>Mis presentaciones</h3>
                 <hr>
