--- a/Marikve7/pasatiempos2/pagina2.html
+++ b/Marikve7/pasatiempos2/pagina2.html
@@ -69,7 +69,7 @@
             </article>
         </section>
 
-        <section>
+        <section id="n04">
             <article>
                 <h3>Valores</h3>
                 <hr>
