--- a/Marikve7/pasatiempos2/pagina3.html
+++ b/Marikve7/pasatiempos2/pagina3.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
 
-        <section>
+        <section id="n05">
             <header>
                 <h2>Series</h2>
                 <hr>
