--- a/ErickLTI/p5/index.html
+++ b/ErickLTI/p5/index.html
@@ -1,5 +1,3 @@
-<!--  -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +6,53 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>seelctores</h2>
+    <header>
+        <h2>Selectores</h2>
+    </header>
 
-    <h3>selecor universal</h3>
-    <img src="fafafaf" alt="">
-    <h3>resultado</h3>
-    <img src="aayy" alt="">
+    <main>
+        <section>
+            <h3>Selector universal</h3>
+            <img src="" alt="">
+            <!-- CAP DEL CODE DONDE SE USA -->
+            <h3>Resulado</h3>
+            <img src="" alt="">
+            <!-- Captura de pantalla de la página de pasatiempos donde se vea el uso del selector -->
+        </section>
 
+        <section>
+            <h3>Selector de tipo</h3>
+            <img src="" alt="">
+            <h3>Resulado</h3>
+            <img src="" alt="">
+        </section>
 
+        <section>
+            <h3>Selector por id</h3>
+            <img src="" alt="">
+            <h3>Resulado</h3>
+            <img src="" alt="">
+        </section>
+        
+        <section>
+            <h3>Selector por clase</h3>
+            <img src="" alt="">
+            <h3>Resulado</h3>
+            <img src="" alt="">
+        </section>
+
+        <section>
+            <h3>Selector de tipo</h3>
+            <img src="" alt="">
+            <h3>Resulado</h3>
+            <img src="" alt="">
+        </section>
+    </main>
+
+    <footer>
+        <address>
+            <p>Desarrollado por EYCM</p>
+        </address>
+    </footer>
 </body>
 </html>
-
-<!-- Ejemplo: #1  footer aplicaría compo 3 selecores: de tipo, etc  -->
