selector hermano general

--- a/Marikve7/pasatiempos2/pagina3.html
+++ b/Marikve7/pasatiempos2/pagina3.html
@@ -42,7 +42,7 @@
             </article>
         </section>
 
-        <section>
+        <section id="n06">
             <article>
                 <h3>¿Por qué me gusta??</h3>
                 <hr>
