--- a/oswtobias06/pasatiempos2/index.html
+++ b/oswtobias06/pasatiempos2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" id="ind">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,8 @@
         <h1>Pasatiempos - Oswaldo Tobias</h1>
     </header>
     <main class="parraf">
-        <p>Me llamo Oswaldo Isai Tobias Torres, tengo 18 años y actualmente me encuentro estudiando la carrera de LTI en 5to semestre. Hoy les hablaré de algunos de mis pasatiempos que realizo, ya sea para divertirme o disfrutarlo haciendolos.</p>
+        <p>Me llamo Oswaldo Isai Tobias Torres, tengo 18 años y actualmente me encuentro estudiando la carrera de LTI en 5to semestre.</p>
+        <p>Hoy les hablaré de algunos de mis pasatiempos que realizo, ya sea para divertirme o disfrutarlo haciendolos.</p>
     </main>
     <br>
     <nav>
