--- a/oswtobias06/pasatiempos2/pag3.html
+++ b/oswtobias06/pasatiempos2/pag3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" id="p3">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,10 @@
         <h1>Deportes</h1>
     </header>
     <main class="parraf">
-        <h3> Ver partidos de fútbol</h3>
+        <h3 id="Deportes"> Ver partidos de fútbol</h3>
         <p>Uno de mis pasatiempos que hago con frecuencia es este, ya que cada vez que juega mi equipo de Tigres siempre planeo el día para quedar desocupado a la hora del juego. También cuando tengo tiempo me veo otros partidos que esten interesante como los que se jugaron en el mundial de clubes.</p>
         <img width="500" src="files/futbol.jpg" alt="futbol" srcset="">
-        <h3>Ver partidos de futbol Americano</h3>
+        <h3 id="Deportes">Ver partidos de futbol Americano</h3>
         <p>Cuando es temporada de NFL, siempre que tenga tiempo libre me veo uno que otro partido, pero sin duda nunca me pierdo el Super Bowl</p>
         <img src="https://imagenes.eleconomista.com.mx/files/image_768_768/uploads/2024/01/28/66e89781b10c7.png" alt="">
     </main>
