Implementación de las capturas de pantalla css al index de los selectores

--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -14,45 +14,52 @@
     <hr>
     <main class="mainselector">
         <article>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector Universal</h3>
+                <img src="img_selectores/s_universal.png" alt="">
+                <img src="img_selectores/s_universal2.png" alt="">
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por tipo</h3>
+                <img src="img_selectores/s_tipo.png" alt="">
+                <img src="img_selectores/s_tipo2.png" alt="">
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por ID</h3>
+                <img src="img_selectores/s_id.png" alt="">
+                <img src="img_selectores/s_id2.png" alt="">
+                <img src="img_selectores/s_id1.png" alt="">
+                <img src="img_selectores/s_id3.png" alt="">
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Clases</h3>
+                <img src="img_selectores/s_clase.png" alt="">
+                <img src="img_selectores/s_clase2.png" alt="">
+
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Clase con tag particular</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Atributo</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Lista</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Descendientes</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Hijos Directos</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Hijos Adyacentes</h3>
             </section>
-            <section>
+            <section id="sectionselector">
                 <h3>Selector por Hermano General</h3>
             </section>
         </article>
     </main>
     <footer class="footer">
         <address>
-            <h4> &copy; Desarrollado por Hugo Alejandro Zapata Rosales</h4>
-        </address>
-    </footer>
-</body>
-</html>
+            <h4> &copy; Desarrollado por Hugo Alejandro Zapata Rosa
