--- a/Hugo-0699/pasatiemposmod/index.html
+++ b/Hugo-0699/pasatiemposmod/index.html
@@ -11,7 +11,7 @@
     <title>Pagina principal</title>
 </head>
 <body class="bodyprincipal">
-    <header class="headerprincipal">
+    <header class="headerprincipal" id="h1uni">
         <h1>Mis pasatiempos</h1>
     </header>
     <main>
