--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -45,6 +45,12 @@
                     en el index.html de la organizacion del maestro. 
                 </p>
 
+                <p>Links pedidos:</p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/index.html">Link página personal de Evidencias</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-20&until=2025-08-22">Link de commits</a></li>
+                </ul>
+
                 <h4>Fecha commits</h4>
                 <p>20 al 22 de agosto del 2025</p>
             </article>
@@ -76,6 +82,29 @@
 
                 <h4>Fecha commits</h4>
                 <p>27 al 29 de agosto del 2025</p>
+
+            </article>
+        </section>
+
+                <section>
+            <article>
+                <header>
+                    <h3>Practica 4</h3>
+                    <hr>
+                </header>
+
+                <p>Practica 4 de EV1 - En esta practica se pidio crearle un diseño 
+                    a nuestro nombre de la pagina principal del html de la organización por
+                    medio de css. 
+                </p>
+                
+                <p>Enlaces pedidos:</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-09-01&until=2025-09-03">Link de commits</a></li>
+                </ul>
+
+                <h4>Fecha commits</h4>
+                <p>01 al 03 de septiembre del 2025</p>
 
             </article>
         </section>
