commit practica 5 final

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -86,7 +86,7 @@
             </article>
         </section>
 
-                <section>
+        <section>
             <article>
                 <header>
                     <h3>Practica 4</h3>
@@ -105,6 +105,28 @@
 
                 <h4>Fecha commits</h4>
                 <p>01 al 03 de septiembre del 2025</p>
+
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <header>
+                    <h3>Practica 5</h3>
+                    <hr>
+                </header>
+
+                <p>Practica 5 de EV1 - En esta practica se pidio agregar 10 tipos de selectores a las paginas de los pasatiempos2 y tomarle captura al codigo css y mostrar el resultado. 
+                </p>
+                
+                <p>Enlaces pedidos:</p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 5/index.html">Link Página selectores</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-09-09&until=2025-09-09">Link de commits</a></li>
+                </ul>
+
+                <h4>Fecha commits</h4>
+                <p>08 al 10 de septiembre del 2025</p>
 
             </article>
         </section>
