--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -121,7 +121,7 @@
                 
                 <p>Enlaces pedidos:</p>
                 <ul>
-                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 5/index.html">Link Página selectores</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 5/selectores.html">Link Página selectores</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-09-09&until=2025-09-09">Link de commits</a></li>
                 </ul>
 
