selector universal y de tipo

--- a/Bere-ops/Pasatiempos_Ver2/index.html
+++ b/Bere-ops/Pasatiempos_Ver2/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <audio src="intro_ouran.mp4" autoplay loop></audio>
 </head>
-<body>
+<body id="inicio">
 <header>
   <h1>Mis Pasatiempos</h1>
   <nav>
