--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -49,7 +49,7 @@
         <p>Apliqué un estilo personalizado a mi link de la página principal de la organización. Los estilos que utilicé los guardé dentro de mi carpeta en la organización.</p>
         <p>Link</p>
         <ul>
-            <li>https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-01&until=2025-09-03&author=Bere-ops</li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-01&until=2025-09-03&author=Bere-ops"></a>/li>
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 1 al 3 de Septiembre.</p>
