--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -12,50 +12,49 @@
         <h1>&star; SELECTORES EN CSS &star;</h1>
     </header>
     <hr>
-    <main class="mainselector">
+    <main class="mainprincipal">
         <article>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector Universal</h3>
                 <img src="img_selectores/s_universal.png" alt="">
                 <img src="img_selectores/s_universal2.png" alt="">
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por tipo</h3>
                 <img src="img_selectores/s_tipo.png" alt="">
                 <img src="img_selectores/s_tipo2.png" alt="">
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por ID</h3>
                 <img src="img_selectores/s_id.png" alt="">
                 <img src="img_selectores/s_id2.png" alt="">
                 <img src="img_selectores/s_id1.png" alt="">
                 <img src="img_selectores/s_id3.png" alt="">
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Clases</h3>
                 <img src="img_selectores/s_clase.png" alt="">
                 <img src="img_selectores/s_clase2.png" alt="">
-
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Clase con tag particular</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Atributo</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Lista</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Descendientes</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Hijos Directos</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Hijos Adyacentes</h3>
             </section>
-            <section id="sectionselector">
+            <section class="sectionselector">
                 <h3>Selector por Hermano General</h3>
             </section>
         </article>
@@ -66,4 +65,4 @@
         </address>
     </footer>
 </body>
-</html>     
+     
