Agregando el contenido nuevo al CSS

--- a/KingBootleg/PasatiemposVer2/convivir.html
+++ b/KingBootleg/PasatiemposVer2/convivir.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Convivir y conocer gente</h1>
     <p>Algo que me gusta mucho es el convivir y conocer gente, el poder socializar es algo que me gusta mucho.</p>
-    <P>El hacer amigos es una buena forma de mejorar mis habitos sociales y a futuro poder tener mejor comunicacion con gente de una empresa</P>
+    <P class="destacado">El hacer amigos es una buena forma de mejorar mis habitos sociales y a futuro poder tener mejor comunicacion con gente de una empresa</P>
     <img src="https://c.tenor.com/LSvaSkcz6UQAAAAd/tenor.gif" alt="monos girando" style="width: 30%; height: auto;">
     <audio controls autoplay loop>
   <source src="https://incompetech.com/music/royalty-free/mp3-royaltyfree/Monkeys%20Spinning%20Monkeys.mp3" type="audio/mpeg">
