--- a/KingBootleg/PasatiemposVer2/index.html
+++ b/KingBootleg/PasatiemposVer2/index.html
@@ -13,7 +13,7 @@
     <main>
         <article>
             <h2><a href="juegos.html">Videojuegos</a></h2>
-            <p>Uno de mis pasatiempos favoritos es jugar videojuegos.</p>
+            <p class="especial">Uno de mis pasatiempos favoritos es jugar videojuegos.</p>
         </article>
 
         <article>
