selector por id y por clase, también css del index de los selectores

--- a/Bere-ops/Pasatiempos_Ver2/series.html
+++ b/Bere-ops/Pasatiempos_Ver2/series.html
@@ -22,14 +22,15 @@
 </header>
 
 <main class="layout">
-  <article>
-    <h2><span style="font-size: 35px;">Anime 💖</span></h2>
+  <article id="contenido_anime">
+  <h2><span style="font-size: 35px;">Anime 💖</span></h2>
 
-    <section>
-      <p> El primer anime que vi fue <cite><strong>Naruto</strong></cite>, y la verdad le tengo mucho cariño y nostalgia.</p>
-      <p>La historia se divide en dos sagas: <cite>Naruto</cite> y <cite>Naruto Shippuden</cite>. De esas dos, mi favorita es <cite>Shippuden</cite></p>
-      <img src="img/naruto.jpeg" alt="Naruto Shippuden" width="400">
-    </section>
+  <section class="favoritos">
+    <p> El primer anime que vi fue <cite><strong>Naruto</strong></cite>, y la verdad le tengo mucho cariño y nostalgia.</p>
+    <p>La historia se divide en dos sagas: <cite>Naruto</cite> y <cite>Naruto Shippuden</cite>. De esas dos, mi favorita es <cite>Shippuden</cite></p>
+    <img src="img/naruto.jpeg" alt="Naruto Shippuden" width="400">
+  </section>
+
 
     <section>
       <h3><span style="font-size: 25px;">Animes Favoritos</h3>
