--- a/Bere-ops/selectores/index.html
+++ b/Bere-ops/selectores/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica 5</title>
     <link rel="stylesheet" href="estilos_selec.css">
 </head>
 <body>
@@ -28,6 +28,25 @@
             <h3>Resultado</h3>
             <img width="700" src="/Bere-ops/selectores/resul_tipo.png" alt="">
         </section>
+
+        <section>
+            <h2><strong>Selector por ID</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/id.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="800" src="/Bere-ops/selectores/resul_id.png" alt="">
+        </section>
+
+        <section>
+            <h2><strong>Selector por clase</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/clase.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="700" src="/Bere-ops/selectores/resul_clase.png" alt="">
+        </section>
+
     </main>
     
 </body>
