Correccion de errores

--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -36,11 +36,7 @@
                 <p>En esta segunda práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
                 <p>El archivo index.html será mi página personal y se nos solicitó agregar los links de la primera práctica.</p>
                 <ul>
-<<<<<<< HEAD
-=======
                     <li><a href="https://github.com/FDW52AD2025/website52/tree/main/Bejesusrey"></a>Link Pagina Personal de Evidencias</li>
->>>>>>> c384a7c7e78c20ed810b1e5d9a491d3564e95520
-                    <li><a href=""></a>Link Pagina Personal de Evidencias</li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-08-20&until=2025-08-22"></a>Link Commits</li>
                 </ul>
                 <p><b>Fecha de Commits: 20 al 22 de Agosto</b></p>
@@ -56,17 +52,53 @@
                 <p>En cada documento html utilizamos etiquetas de estructura (header,nav, main,aside,footer) para llevar un orden en cada pagina.</p>
                 <p>Ademas agregamos nuevas etiquetas que realizamos en practicas durante la clase</p>
                 <ul>
-<<<<<<< HEAD
-=======
                     <li><a href="https://github.com/FDW52AD2025/website52/tree/main/Bejesusrey/pasatiemposV2">Link de Pagina Personal</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-08-27&until=2025-08-29">Link Commits Trabajo en Clase 27 de agosto</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey">Link de los Commits</a></li>
->>>>>>> c384a7c7e78c20ed810b1e5d9a491d3564e95520
-                    <li><a href="">Link de Pagina Personal</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-08-27&until=2025-08-29">Link Commits Trabajo en Clase 27 de agosto</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits?author=Bejesusrey">Link de los Commits</a></li>
                 </ul>
                 <p><b>Fecha de Commits: 27 al 29 de Agosto</b></p>
+            </article>
+        </section>
+
+        <section>
+            <h2>Cuarta Practica</h2>
+            <article>
+                <p>En esta practica se nos pidió aplicar un estilo personalizado a nuestro link de la página principal de la organización. Los estilos aplicados los almacenamos dentro de nuestra carpeta en la organización. Agregamos ademas un link css en la sección head del archivo index (archivo de la organización).</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-09-01&until=2025-09-03"></a>Link Commits</li>
+                </ul>
+                <p><b>Fecha de Commits: 1 al 3 de Septiembre</b></p>
+            </article>
+        </section>
+
+        <section>
+            <h2>Quinta Practica</h2>
+            <article>
+                <p>En esta practica creamos un sitio donde mostramos ejemplos de los selectores vistos en clase</p>
+                <p><b>Muestro la lista de selectores utilizados</b></p>
+                <ul>
+                    <li>Selector universal</li>
+                    <li>Selector de tipo</li>
+                    <li>Selector por id</li>
+                    <li>Selector por clase</li>
+                    <li>Selector de atributo</li>
+                    <li>Selector de lista</li>
+                    <li>Selector de descendientes</li>
+                    <li>Selector de hijos directos</li>
+                    <li>Selector hermano adyacente</li>
+                    <li>Selector hermano general</li>
+                </ul>
+                <p><i>Cada selector contiene</i></p>
+                <ul>
+                    <li>Nombre del Selector</li>
+                    <li>Imagen del codigo CSS que se aplicó</li>
+                    <li>Imagen del resultado aplicado</li>
+                </ul>
+                <ul>
+                    <li><a href=""></a>Link Pagina de Selectores</li>
+                    <li><a href=""></a>Link Commits</li>
+                </ul>
+                <p><b>Fecha de Commits: 8 al 10 de Septiembre</b></p>
             </article>
         </section>
 
