selector de atributo y lista, cambio de imágenes y cambio de width

--- a/Bere-ops/selectores/index.html
+++ b/Bere-ops/selectores/index.html
@@ -14,7 +14,7 @@
         <section>
             <h2><strong>Selector universal</strong></h2>
             <h3>Código CSS</h3>
-            <img width="300" src="/Bere-ops/selectores/universal.png" alt="">
+            <img width="350" src="/Bere-ops/selectores/universal.png" alt="">
 
             <h3>Resultado</h3>
             <img width="700" src="/Bere-ops/selectores/resul_uni.png" alt="">
@@ -23,7 +23,7 @@
         <section>
             <h2><strong>Selector de tipo</strong></h2>
             <h3>Código CSS</h3>
-            <img width="300" src="/Bere-ops/selectores/tipo.png" alt="">
+            <img width="350" src="/Bere-ops/selectores/tipo.png" alt="">
 
             <h3>Resultado</h3>
             <img width="700" src="/Bere-ops/selectores/resul_tipo.png" alt="">
@@ -45,6 +45,24 @@
 
             <h3>Resultado</h3>
             <img width="700" src="/Bere-ops/selectores/resul_clase.png" alt="">
+        </section>
+
+        <section>
+            <h2><strong>Selector de atributo</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/atributo.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="350" src="/Bere-ops/selectores/resul_atributo.png" alt="">
+        </section>
+
+        <section>
+            <h2><strong>Selector de lista</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/lista.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="300" src="/Bere-ops/selectores/resul_lista.png" alt="">
         </section>
 
     </main>
