Estructura para practica 5 y correcciones

--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -59,41 +59,26 @@
                 <p><b>Fecha de Commits: 27 al 29 de Agosto</b></p>
             </article>
         </section>
+        <hr>
 
         <section>
             <h2>Cuarta Practica</h2>
             <article>
-                <p>En esta practica se nos pidió aplicar un estilo personalizado a nuestro link de la página principal de la organización. Los estilos aplicados los almacenamos dentro de nuestra carpeta en la organización. Agregamos ademas un link css en la sección head del archivo index (archivo de la organización).</p>
+                <p>En esta practica se nos pidió aplicar un estilo personalizado a nuestro link de la página principal de la organización.</p>
+                <p>Los estilos aplicados los almacenamos dentro de nuestra carpeta en la organización.</p>
+                <p>Agregamos ademas un link css en la sección head del archivo index (archivo de la organización).</p>
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-09-01&until=2025-09-03"></a>Link Commits</li>
                 </ul>
                 <p><b>Fecha de Commits: 1 al 3 de Septiembre</b></p>
             </article>
         </section>
+        <hr>
 
         <section>
             <h2>Quinta Practica</h2>
             <article>
                 <p>En esta practica creamos un sitio donde mostramos ejemplos de los selectores vistos en clase</p>
-                <p><b>Muestro la lista de selectores utilizados</b></p>
-                <ul>
-                    <li>Selector universal</li>
-                    <li>Selector de tipo</li>
-                    <li>Selector por id</li>
-                    <li>Selector por clase</li>
-                    <li>Selector de atributo</li>
-                    <li>Selector de lista</li>
-                    <li>Selector de descendientes</li>
-                    <li>Selector de hijos directos</li>
-                    <li>Selector hermano adyacente</li>
-                    <li>Selector hermano general</li>
-                </ul>
-                <p><i>Cada selector contiene</i></p>
-                <ul>
-                    <li>Nombre del Selector</li>
-                    <li>Imagen del codigo CSS que se aplicó</li>
-                    <li>Imagen del resultado aplicado</li>
-                </ul>
                 <ul>
                     <li><a href=""></a>Link Pagina de Selectores</li>
                     <li><a href=""></a>Link Commits</li>
