--- a/Bejesusrey/SelectoresCss/index.html
+++ b/Bejesusrey/SelectoresCss/index.html
@@ -7,6 +7,98 @@
 </head>
 
 <body>
-    
+    <header>
+        <h2>Selectores</h2>
+    </header>
+
+    <main>
+        <section>
+            <h3>Selector Universal</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector de Tipo</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector por ID</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector por Clase</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector de Atributo</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector de Lista</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector de Descendientes</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector Universal</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector Hijos Directos</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector Hermano Adyacente</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+        <hr>
+
+        <section>
+            <h3>Selector Hermano General</h3>
+            <img src="" alt="">
+            <h3>Resultado</h3>
+            <img src="" alt="">
+        </section>
+    </main>
+
 </body>
 </html>
