selector descendientes e hijos directos

--- a/Bere-ops/Pasatiempos_Ver2/videojuegos.html
+++ b/Bere-ops/Pasatiempos_Ver2/videojuegos.html
@@ -22,7 +22,7 @@
 </header>
 
 <main class="layout">
-  <article>
+  <article id="videojuegos">
     <h2><span style="font-size: 35px;">Videojuegos 💖</span></h2>
     <section>
       <p>Juego pocos videojuegos, pero los que más destacan para mí son <mark>Cuphead</mark> y <mark>Rainbow Six</mark>.</p>
