--- a/Bere-ops/selectores/index.html
+++ b/Bere-ops/selectores/index.html
@@ -65,6 +65,25 @@
             <img width="300" src="/Bere-ops/selectores/resul_lista.png" alt="">
         </section>
 
+        <section>
+            <h2><strong>Selector de descendientes</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/descendientes.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="800" src="/Bere-ops/selectores/resul_descendientes.png" alt="">
+        </section>
+
+        <section>
+            <h2><strong>Selector hijos directos</strong></h2>
+            <h3>Código CSS</h3>
+            <img width="350" src="/Bere-ops/selectores/hijos_directos.png" alt="">
+
+            <h3>Resultado</h3>
+            <img width="700" src="/Bere-ops/selectores/resul_hijos_directos.png" alt="">
+        </section>
+
+
     </main>
     
 </body>
