Segundo boceto, práctica 5

--- a/SunnyWiltshire/P2v1/pasatiempo2.html
+++ b/SunnyWiltshire/P2v1/pasatiempo2.html
@@ -40,32 +40,32 @@
             <tbody>
                 <tr>
                 <td>Poderosa: una chica con el mundo en sus manos</td>
-                <td>Sergio Klein</td>
+                <td id="n">Sergio Klein</td>
                 <td>Un libro precioso que leí de pequeña. Fue de los primeros libros que leí y todavía recuerdo con cariño.</td>
                 </tr>
                 <tr>
                 <td>Almendra</td>
-                <td>Won-pyung Sohn</td>
+                <td id="n">Won-pyung Sohn</td>
                 <td>Este es de los libros más recientes que he leído. Me hizo llorar; aunque el protagonista no podía sentir, yo sentí demasiado por él.</td>
                 </tr>
                 <tr>
                 <td>Dreamology</td>
-                <td>Lucy Keating</td>
+                <td id="n">Lucy Keating</td>
                 <td>Un libro divino que ya he leído dos veces. Sin duda es una historia de romance preciosa y graciosa que te hace cuestionar si ese muchacho con el que soñaste era una persona real o no.</td>
                 </tr>
                 <tr>
                 <td>La paciente silenciosa</td>
-                <td>Alex Michaelides</td>
+                <td id="n">Alex Michaelides</td>
                 <td>Este libro fue el último que leí. Me cautivó por su manejo de la línea del tiempo, ya que uno piensa que va cronológicamente con algunos flashbacks, pero cuando crees saber quién fue el culpable, la historia da un giro inesperado y descubres al verdadero responsable.</td>
                 </tr>
                 <tr>
                 <td>Kafka y la muñeca viajera</td>
-                <td>Jordi Sierra i Fabra</td>
+                <td id="n">Jordi Sierra i Fabra</td>
                 <td>Este fue de los primeros libros que recuerdo haber leído en la biblioteca de mi escuela. Le tengo un enorme cariño por cómo se supone que Franz Kafka ayudó a una niña a superar la pérdida de su muñeca. No se sabe si la historia fue real, pero fue algo muy lindo de leer.</td>
                 </tr>
                 <tr>
                 <td>La improbable teoría de Ana y Zak</td>
-                <td>Brian Katcher</td>
+                <td id="n">Brian Katcher</td>
                 <td>Por lo general, el cliché de <em>enemies to lovers</em> (enemigos a amantes) no me suele gustar, pero este fue la excepción.</td>
                 </tr>
             </tbody>
