--- a/SunnyWiltshire/P5/index.html
+++ b/SunnyWiltshire/P5/index.html
@@ -19,9 +19,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector1.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado1.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -29,9 +29,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector2.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado2.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -39,9 +39,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector3.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado3.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -49,9 +49,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector4.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado4.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -59,9 +59,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector5.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado5.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -69,9 +69,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector6.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado6.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -79,9 +79,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector7.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado7.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -89,9 +89,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector8.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado8.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -99,9 +99,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector9.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado9.jpg" alt="">
         </section>
         <hr>
         <section>
@@ -109,9 +109,9 @@
             <p>Ecplicación del selector</p>
             <h3>Codigo CSS</h3>
             <p>Explicación del código</p>
-            <img src="img/selector.png" alt="">
+            <img src="img/selector10.jpg" alt="">
             <h3>Resultado</h3>
-            <img src="img/resultado.png" alt="">
+            <img src="img/resultado10.jpg" alt="">
         </section>
             <hr>
     </main>
